Bug 1197201. Delete hardware vsync and vsync compositor prefs. r=kats