modules/libpref/init/all.js
@@ -5049,8 +5049,6 @@ pref("dom.audiochannel.mutedByDefault", false);
 // Use vsync aligned rendering. b2g prefs are in b2g.js.
 // Hardware vsync supported on windows, os x, and b2g.
 // Linux and fennec will use software vsync.
-pref("gfx.vsync.hw-vsync.enabled", true);
-pref("gfx.vsync.compositor", true);
 pref("gfx.vsync.refreshdriver", true);
 
 // Secure Element API
